# AI_Teacher_AIT

./: README.md
a_i_t/: .firebaserc  README.md  firebase.json  pubspec.yaml
a_i_t/android/app/: build.gradle.kts  google-services.json
a_i_t/dataconnect/: dataconnect.yaml
a_i_t/ios/Runner/: Info.plist
a_i_t/ios/Runner.xcodeproj/: project.pbxproj
a_i_t/lib/: firebase_options.dart  main.dart  userdata.txt
a_i_t/lib/data/: teachers_data.dart
a_i_t/lib/models/: student.dart  teacher.dart
a_i_t/lib/providers/: teacher.dart
a_i_t/lib/screens/: auth.dart  splash.dart  teacher_chat.dart  teachers.dart
a_i_t/lib/widgets/: image_input.dart  side_menu.dart
a_i_t/linux/: CMakeLists.txt
a_i_t/linux/runner/: my_application.cc
a_i_t/macos/Runner.xcodeproj/: project.pbxproj
a_i_t/test/: widget_test.dart
a_i_t/web/: index.html  manifest.json
a_i_t/windows/: CMakeLists.txt
a_i_t/windows/runner/: Runner.rc  main.cpp
a_i_t_backend/: .env  app.py  pyproject.toml  test.py
a_i_t_backend/database/: .env  db_handler.py
a_i_t_backend/database/data/: A_I_T.db
a_i_t_backend/database/data/userDatabases/: RFnBytCT72ezxWp1SHJbN8y5Aft2.db  TgolsjwlUqeMnX0JR4nDrz3Ms0u2.db  fBXaCd7Fm4Z3qKkngVFJHb35YD43.db  hbskjdhdfhsdkjfskdbvfkjdhjdfh.db  mahendra.db
a_i_t_backend/experiments/: experiment.ipynb  experiment2.ipynb
a_i_t_backend/models/: __init__.py  student_data.py  user_request.py
a_i_t_backend/prompts/: prompts.py
a_i_t_backend/tools/: __init__.py  tools.py
a_i_t_backend/utils/: __init__.py  app_utilities.py
(+4 files in other folders)
